# euengine

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  readme.md
.cursor/rules/: styling.mdc
assets/gfx/: black.tga  chrome2.tga  chrome3.tga  combust2.tga  envmap1.tga  envmap2.tga  envmap3.tga  envmap4.tga  expl.tga  expl_blue.tga  flare_blue_small.tga  flare_orange_green_small.tga  flare_white_red_small.tga  hbar_0.tga  hbar_1.tga  lightning1.tga  lightning2.tga  lightning_big.tga  logo.tga  mark.tga  mc_cur.tga  pepel.tga  rain.tga  scores.tga  smoke.tga  smoke2.tga  smoke3.tga  smoke4.tga  smoke_green.tga  spice.tga  splash.tga  splash_ship.tga  water_spray.tga
assets/gfx/clouds/: clouds1.tga
assets/gfx/effects/: earth_piece.tga  expl1light.tga  expl_dust.tga  flare_blue.tga  flare_green.tga  flare_red.tga  flare_test.tga  flash_yellow.tga  fonarflare.tga  fonarflare_red.tga  gibflare.tga  gibspark.tga  moln.tga  shell_mag.tga  shield.tga  shield_boss.tga  whitespark.tga
assets/gfx/logo/: clouds.tga  glow.tga  lines_gulf.tga  logo.tga  logo_gulf.tga  two3.tga
assets/gfx/marks/: jeepmark1.tga  tankmark1.tga
assets/gfx/ui/: font.tga  font_alpha.tga  grid.tga  helicna.tga  interface_gulf.tga  items.tga  life.tga  mainbar2.tga  missiles.tga  portraits2.tga  snow.tga  weapons.tga
assets/gfx/water/: water_ocean_1.tga  water_ocean_1_shine.tga  water_sand_1.tga  water_sand_1_shine.tga
assets/gfx/weapons/: bublik.tga  combust_flamefrower.tga  combust_flamefrower2.tga  combust_flamefrower_2.tga  combust_flamefrower_3.tga  expl_missile.tga  hits.tga  iskra.tga  photon2.tga
assets/maps/: intro.yaml  level01.yaml  level02.yaml  level03.yaml  level04.yaml  level05.yaml  level06.yaml  level07.yaml  level08.yaml  level09.yaml  level10_boss.yaml  level11_bonus.yaml  level12.yaml  level13.yaml  level14.yaml  level15.yaml  level16.yaml  level17.yaml  level18_bonus.yaml  level19.yaml  level20.yaml  level21.yaml  level22.yaml  level23.yaml  level24_boss.yaml  levels.txt  levels.yaml
assets/menu/: cursor_1.tga  cursor_2.tga
assets/models/: dead.tga
assets/models/_new/: meteorite.tga  stones.tga
assets/models/bikes/: bike01.tga  bike02.tga
assets/models/btrs/: btr_dead.tga
assets/models/gibs/: gib.tga  gib_koleso.tga
assets/models/helics/: helic_dead.tga  redflare.tga
assets/models/items/: bonus.tga  life.tga
assets/models/jeeps/: jeep_dead.tga
assets/models/misc/: deadunit.tga  hlanno.tga  lighting_nature.tga  ring.tga  ring2.tga  ring_fire.tga  svet_far.tga  svet_far_orange.tga  svet_far_red.tga
assets/models/planes/: plane_dead.tga
assets/models/rocket_launcher_big/: rocket_launcher_big_dead.tga  (+2 more)
assets/morphmaps/: map1.tga  map1_big.tga  map2.tga  map_medium.tga  map_small.tga
assets/particles/: _new.yaml  boss2.yaml  explosions.yaml  particles.yaml  rlbig.yaml  water.yaml  weapons.yaml  weapons_enemy.yaml  weather.yaml
assets/scenes/: test_scene.glb
assets/scripts/: bonus_level_start.scr  bonuslevel_spdup.scr  bonuslevel_spdup1.scr  dead2.scr  empty.scr  eol.scr  item_shell.scr  radar.scr  radar_fast.scr  radar_slow.scr  snow.scr  snow_constant.scr  stop.scr  test_particles.scr  train.scr
assets/tiles/: tiles1.tga  tiles2.tga  tiles3.tga  tiles4.tga  tiles5.tga  tiles6.tga  tiles7.tga  tiles8.tga  tiles9.tga
assets/weapons/: e_missiles.yaml  e_weapons.yaml  enemies.yaml  player.yaml
cmake/: ccache-config.cmake  cpm-config.cmake  warnings-config.cmake
cmake/code-quality/: clang_doc-config.cmake  clang_format-config.cmake  clang_tidy-config.cmake  doxygen-config.cmake
cmake/cpm/: cpm_bullet3-config.cmake  cpm_gsl-config.cmake  cpm_recastnavigation-config.cmake  cpm_sdl3-config.cmake  cpm_tracy-config.cmake  entt-config.cmake  freetype-config.cmake  glm-config.cmake  imgui-config.cmake  spdlog-config.cmake  steam_audio-config.cmake
shaders/: postprocess.frag.hlsl  postprocess.vert.hlsl  sky.frag.hlsl  sky.vert.hlsl  textured.frag.hlsl  textured.vert.hlsl  wireframe.frag.hlsl  wireframe.vert.hlsl
src/engine/: CMakeLists.txt
src/engine/core-api/: CMakeLists.txt  audio.hpp  audio_system.hpp  camera.hpp  engine.hpp  engine_interface.hpp  game.hpp  game_module_system.hpp  model_loader.hpp  overlay_layer.hpp  platform.hpp  profiler.hpp  profiling_events.hpp  render_system.hpp  renderer.hpp  window.hpp
src/engine/details/: CMakeLists.txt  engine.cpp  engine.hpp  entry.cpp  imgui_layer.hpp  main.cpp  render.hpp
src/engine/details/audio/: CMakeLists.txt  audio.cpp  audio.hpp
src/engine/details/game_module/: CMakeLists.txt  game_module_manager.cpp  game_module_manager.hpp  game_module_system.cpp  game_module_system.hpp
src/engine/details/model/: CMakeLists.txt  gltf_loader.cpp  model_loader_registry.hpp  model_system.hpp
src/engine/details/overlay/: CMakeLists.txt  imgui_layer.cpp  imgui_layer.hpp
src/engine/details/render/: CMakeLists.txt  render_system.cpp  render_system.hpp  renderer.cpp  renderer.hpp  renderer_manager.cpp  renderer_manager.hpp
src/engine/details/render/model/: CMakeLists.txt  gltf_loader.cpp  gltf_loader.hpp  model_system.cpp  model_system.hpp
src/engine/details/render/shader/: CMakeLists.txt  shader.cpp  shader.hpp
src/engine/details/render/texture/: CMakeLists.txt  texture.cpp  texture.hpp
src/engine/private/: CMakeLists.txt  audio.cpp  audio.hpp  engine.cpp  engine.hpp  imgui_layer.cpp  imgui_layer.hpp  render.cpp  render.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/engine/private/model/: CMakeLists.txt  gltf_loader.cpp  gltf_loader.hpp  model_loader.hpp  model_loader_registry.cpp
src/engine/private/model-loaders/: CMakeLists.txt  gltf_loader.cpp  gltf_loader.hpp  model_loader.hpp  model_loader_registry.hpp  obj_loader.cpp  obj_loader.hpp  tinygltf_impl.cpp  tinyobj_impl.cpp
src/game/: CMakeLists.txt  game.cpp  gltf_scene.cpp  gltf_scene.hpp  imgui_style.cpp  imgui_style.hpp  profiler.cpp  profiler.hpp  python_bindings.cpp  python_bindings.hpp  scene.cpp  scene.hpp  ui.cpp  ui.hpp
src/game/scripts/: scene_demo.py
(+919 files in other folders)
